--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>uk.offtopica</groupId>
     <artifactId>addressutil</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <name>addressutil</name>
     <description>Create, verify, and manipulate crypto-currency addresses</description>
@@ -25,7 +25,7 @@
         <url>https://github.com/00-matt/addressutil</url>
         <connection>scm:git:git://github.com/00-matt/addressutil.git</connection>
         <developerConnection>scm:git:git@github.com:00-matt/addressutil.git</developerConnection>
-      <tag>addressutil-0.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <licenses>
